--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pysonofflan
 aiohttp==3.5.4
 asn1crypto==0.24.0
 astral==1.7.1
@@ -16,6 +15,7 @@ MarkupSafe==1.1.0
 multidict==4.5.2
 pycparser==2.19
 PyJWT==1.6.4
+pysonofflan>=0.1.7
 python-slugify==1.2.6
 pytz==2018.9
 PyYAML==3.13
