--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
         "domain": "sonoff_lan_mode",
-        "name": "SOnOff Lan Model component",
+        "name": "Sonoff LAN Mode",
         "documentation": "https://github.com/beveradb/sonoff-lan-mode-homeassistant",
-        "requirements": [],
+        "requirements": ["pysonofflan>=0.2.1"],
         "dependencies": [],
         "codeowners": ["andrew@beveridge.uk"]
 }
